[gd_scene load_steps=10 format=3 uid="uid://mhq63m73mxvj"]

[ext_resource type="Script" path="res://scenes/restaurant_page/restaurant_page.gd" id="2_8i2x0"]
[ext_resource type="Texture2D" uid="uid://b8ssg3oc30j53" path="res://images/triple-xxx-drive-in.jpeg" id="3_boamj"]
[ext_resource type="Texture2D" uid="uid://ccyy5wuvqcx3u" path="res://images/8_eleven.jpeg" id="4_hwf8q"]
[ext_resource type="Texture2D" uid="uid://dqkhxc46thfxy" path="res://images/Harrys.jpeg" id="5_ngkfv"]
[ext_resource type="Texture2D" uid="uid://bh1f48fywcy0j" path="res://images/bru.jpeg" id="6_woact"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hupuq"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_gnbh0"]
Panel/styles/panel = SubResource("StyleBoxFlat_hupuq")

[sub_resource type="Theme" id="Theme_noto5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvec7"]
bg_color = Color(0.631373, 0.596078, 0.541176, 1)

[node name="RestaurantPage" type="Panel"]
custom_minimum_size = Vector2(10, 10)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_gnbh0")
script = ExtResource("2_8i2x0")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 160.0
offset_bottom = 64.0
text = "Return to PMU"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 24.0
offset_right = 672.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 30
text = "Restaurants"

[node name="tripple_XXX" type="Label" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 96.0
offset_right = 440.0
offset_bottom = 121.0
theme_override_font_sizes/font_size = 17
text = "Tripple XXX Family Restaurant"

[node name="TextureRect" type="TextureRect" parent="tripple_XXX"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.023
anchor_top = 1.2
anchor_right = 0.986
anchor_bottom = 7.0
offset_left = 0.360001
offset_right = 0.47998
offset_bottom = 0.999985
texture = ExtResource("3_boamj")
expand_mode = 3

[node name="Button" type="Button" parent="tripple_XXX"]
layout_mode = 0
offset_left = -7.0
offset_top = 192.0
offset_right = 153.0
offset_bottom = 234.0
theme_override_font_sizes/font_size = 13
text = "View Information
 and Rating"

[node name="Button2" type="Button" parent="tripple_XXX"]
layout_mode = 0
offset_left = 176.0
offset_top = 192.0
offset_right = 336.0
offset_bottom = 236.0
theme_override_font_sizes/font_size = 13
text = "View/Leave Reviews"

[node name="8_11" type="Label" parent="."]
layout_mode = 0
offset_left = 680.0
offset_top = 96.0
offset_right = 1039.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 17
text = "8Eleven Modern Bistro"

[node name="TextureRect" type="TextureRect" parent="8_11"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.023
anchor_top = 1.2
anchor_right = 0.986
anchor_bottom = 7.0
offset_left = 0.257001
offset_top = -6.8
offset_right = -38.974
offset_bottom = -58.0
texture = ExtResource("4_hwf8q")
expand_mode = 3

[node name="Button" type="Button" parent="8_11"]
layout_mode = 0
offset_left = -8.0
offset_top = 192.0
offset_right = 152.0
offset_bottom = 234.0
theme_override_font_sizes/font_size = 13
text = "View Information
 and Rating"

[node name="Button2" type="Button" parent="8_11"]
layout_mode = 0
offset_left = 168.0
offset_top = 192.0
offset_right = 296.0
offset_bottom = 236.0
theme_override_font_sizes/font_size = 13
text = "View/Leave Reviews
"

[node name="Harrys" type="Label" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 368.0
offset_right = 471.0
offset_bottom = 402.0
theme_override_font_sizes/font_size = 17
text = "Harry's Chocolate Shop"

[node name="TextureRect" type="TextureRect" parent="Harrys"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.023
anchor_top = 1.2
anchor_right = 0.986
anchor_bottom = 7.0
offset_left = 0.257001
offset_top = -8.8
offset_right = -38.974
offset_bottom = -60.0
texture = ExtResource("5_ngkfv")
expand_mode = 3

[node name="Button" type="Button" parent="Harrys"]
layout_mode = 0
offset_left = -8.0
offset_top = 192.0
offset_right = 152.0
offset_bottom = 234.0
theme_override_font_sizes/font_size = 13
text = "View Information
 and Rating"

[node name="bru" type="Label" parent="."]
layout_mode = 0
offset_left = 672.0
offset_top = 368.0
offset_right = 1031.0
offset_bottom = 402.0
theme_override_font_sizes/font_size = 17
text = "BRU Burger Bar"

[node name="TextureRect" type="TextureRect" parent="bru"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.023
anchor_top = 1.2
anchor_right = 0.986
anchor_bottom = 7.0
offset_left = 0.257001
offset_top = -8.8
offset_right = -38.974
offset_bottom = -60.0
texture = ExtResource("6_woact")
expand_mode = 3

[node name="Button" type="Button" parent="bru"]
layout_mode = 0
offset_left = -8.0
offset_top = 192.0
offset_right = 152.0
offset_bottom = 234.0
theme_override_font_sizes/font_size = 13
text = "View Information
 and Rating"

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 280.0
offset_top = 200.0
offset_right = 888.0
offset_bottom = 464.0
theme = SubResource("Theme_noto5")
theme_override_styles/panel = SubResource("StyleBoxFlat_pvec7")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_right = 608.0
offset_bottom = 160.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 15

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 216.0
offset_right = 88.0
offset_bottom = 254.0
text = "Close"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 232.0
offset_top = 216.0
offset_right = 316.0
offset_bottom = 250.0
theme_override_font_sizes/font_size = 20
text = "Rating:"

[node name="rating_picture" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.257
anchor_top = 0.198
anchor_right = 0.479
anchor_bottom = 0.284
offset_left = 159.744
offset_top = 163.728
offset_right = 160.0
offset_bottom = 175.024

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 464.0
offset_top = 216.0
offset_right = 548.0
offset_bottom = 250.0
theme_override_font_sizes/font_size = 20

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_return_pressed"]
[connection signal="pressed" from="tripple_XXX/Button" to="." method="_on_trippleXXX_pressed"]
[connection signal="pressed" from="tripple_XXX/Button2" to="." method="_on_leave_pressed" binds= ["XXX"]]
[connection signal="pressed" from="8_11/Button" to="." method="_on_811_pressed"]
[connection signal="pressed" from="8_11/Button2" to="." method="_on_leave_pressed" binds= ["eleven"]]
[connection signal="pressed" from="Harrys/Button" to="." method="_on_harrys_pressed"]
[connection signal="pressed" from="bru/Button" to="." method="_on_bru_pressed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_exit_panel_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
